feat: add chef equipe controller and fix some issues